--- a/ChipGroupSample/ChipGroupSample/ChipGroupSample.csproj
+++ b/ChipGroupSample/ChipGroupSample/ChipGroupSample.csproj
@@ -54,8 +54,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-		<PackageReference Include="Syncfusion.Maui.Buttons" Version="25.2.5" />
-		<PackageReference Include="Syncfusion.Maui.Core" Version="25.2.5" />
+		<PackageReference Include="Syncfusion.Maui.Buttons" Version="*" />
+		<PackageReference Include="Syncfusion.Maui.Core" Version="*" />
 	</ItemGroup>
 
 </Project>
